# curs

./: Cargo.toml  README.md
cublas-sys/: Cargo.toml  build.rs
cublas-sys/src/: bindings.rs  lib.rs
cuda-find-path/: Cargo.toml
cuda-find-path/src/: lib.rs
cuda-runtime-sys/: Cargo.toml  build.rs
cudnn-sys/: Cargo.toml  build.rs
cudnn-sys/src/: cudnn.rs
kernel/: Cargo.toml  build.rs
kernel/kernel/: array_scalar_add.cu  array_scalar_add.cuh  compare.cu  compare.cuh  element_wise_operator.cu  element_wise_operator.cuh  kernel.h  transpose.cu  transpose.cuh
kernel/src/: lib.rs
src/: array.rs  compare.rs  cublas.rs  cuda_runtime.rs  dim.rs  dtype.rs  element_wise_operator.rs  error.rs  ffi.rs  kernel.rs  lib.rs  operator.rs
src/array/: compare.rs  new_array.rs  shape.rs  transpose.rs
src/cublas/: add.rs  ffi.rs  level1.rs
src/kernel/: array_scalar_add.rs  compare.rs  element_wise_operator.rs  transpose.rs
tests/: .test_compare.rs.swp  test_alloc.rs  test_compare.rs  test_operators.rs
