[package]
name = "curs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.98"
cublas-sys = {path = "./cublas-sys"}
cuda-runtime-sys = {path = "./cuda-runtime-sys"}
cudnn-sys = {path = "./cudnn-sys"}
kernel = { path = "./kernel" }
num-traits = "*"
