[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[build-dependencies]
cc = "*"
cuda-find-path = {path = "../cuda-find-path"}
bindgen="*"

[dev-dependencies]
cuda-runtime-sys = {path = "../cuda-runtime-sys"}
